
  * DigestBuf:
        - reset() replaces open()
        - eoi() replaces close(), alternatively the eoi manipulator can be
                used 

  * EncryptBuf:
        - Discontinued:
            setKey()
            setIV()

  * HMacBuf:
        - reset() replaces open() 
        - eoi()   replaces close(), or use the eoi manipulator

  * IFdStreambuf:
        - reset() replaces open() 

  * IOStreambuf:
        - xsputn() replaces pXsputn() 
        - reset()  replaces open()

  * IRandStream expects a size_t seed (used to be: long seed);

  * OFdStreambuf:
        - reset() replaces open() 
        - eoi()   replaces close(), or use the eoi manipulator

  * OHexStreambuf:
        - added an extra parameter to its constructor: std::string const
            &separator, by default initialized to an empty string. It
            defines the separator inserted between hexadecimal character
            values. 
        - added members `separator' to redefine or reset the currently used
            separator. 
        - added member `setWidth' to modify the maximum width of lines written
            to the ostream initialized with an OHexStreambuf object.
        - eoi() replaces close(), or use the eoi manipulator

  * OMutexStream:
        new class offering mutex protected ostream operations.

  * Randbuffer:
        - expects a size_t seed (used to be: long seed);
        - fixed a memory leak

  * Selector:
        - wait() returns 0 when its read, write and except file descriptor
            sets are empty.

  * Fixed flaw in Log's FBB::fnl handling


bobcat (4.09.00)

  * The class Log unconditionally inserts level-free messages; level
    objects may be inserted anywhere in insertion statements.

  * The Log and level man pages were updated accordingly.

  * The class DateTime was completely rewritten, using a Pimpl approach using
    the this-pointer instead of a separate data member.

  * The members 'int pSync()', defined in IOStreambuf, LogBuffer,