@@ -1,0 +1,65 @@
+includefile(include/header)
+
+COMMENT(replace 'classname' by the name of the new class)
+
+COMMENT(manpage, section, releasedate, archive, short name)
+manpage(FBB::Classname)(3bobcat)(_CurYrs_)(libbobcat-dev__CurVers_-x.tar.gz)
+                    (Error handler)
+
+manpagename(FBB::Classname)(shortdesc)
+
+manpagesynopsis()
+    bf(#include <bobcat/classname>)nl()
+==================================
+REMOVE for plain template classes:    
+    Linking option: tt(-lbobcat) 
+==================================
+
+manpagedescription()
+
+includefile(include/namespace)
+
+manpagesection(INHERITS FROM)
+    -
+
+manpagesection(TYPEDEFS AND ENUMS)
+
+manpagesection(CONSTRUCTORS)
+    itemization(
+    itb(Classname())
+    )
+
+    The copy and move constructors are available.
+
+manpagesection(OVERLOADED OPERATORS)
+    itemization(
+    itb()
+    )
+
+    The copy and move assignment operators are available.
+
+manpagesection(MEMBER FUNCTIONS)
+     All members of bf(std::ostringstream) and bf(  std::exception) are
+available, as bf(FBB::Classname) inherits from these classes.
+    itemization(
+    itb()
+    )
+
+manpagesection(MANIPULATORS)
+    itemization(
+    itb(FBB::) 
+    )
+
+manpagesection(EXAMPLE)
+    To do
+
+manpagefiles()
+    em(bobcat/classname) - defines the class interface
+
+manpageseealso()
+    bf(bobcat)(7)
+
+manpagebugs()
+    None Reported.
+
+includefile(include/trailer)
