@@ -2,6 +2,5 @@
 
 IFdStreambuf::IFdStreambuf(Mode mode)
 :
-    EoiBuf(0),
     d_mode(mode)
 {}
