@@ -1,5 +1,4 @@
 #include "ifilterstreambuf.ih"
 
 IFilterStreambuf::~IFilterStreambuf()
-{
-}
+{}
