@@ -1,0 +1,4 @@
+#define LIBRARY             "ifilterstreambuf"
+
+#include "../icmconf"
+
