@@ -2,5 +2,5 @@
 
 std::streamsize IFilterStreambuf::showmanyc()
 {
-    return d_srcEnd - d_srcBegin;
+    return (d_srcEnd - d_srcBegin) + (egptr() - gptr());
 }
