@@ -2,7 +2,6 @@
 
 OFdStreambuf::OFdStreambuf()
 :
-    EoiBuf(0),
     d_mode(CLOSE_FD)           // comply with old default
 {}
 
