@@ -2,7 +2,6 @@
 
 OFdStreambuf::OFdStreambuf(Mode mode)
 :
-    EoiBuf(0),
     d_mode(mode)
 {}
 
