@@ -2,7 +2,6 @@
 
 OFdStreambuf::OFdStreambuf(int fd, Mode mode, size_t size)
 :
-    EoiBuf(0),
     d_mode(mode)
 {
     reset(fd, CLOSE_FD, size);
