@@ -1,4 +1,0 @@
-#include "sharedstreambuf.ih"
-
-SharedStreambuf::~SharedStreambuf()
-{}
